fix warning 'The constructor Locale is deprecated since version 20'